refactor(results): add a label for the saving mode

--- a/results.html
+++ b/results.html
@@ -12,7 +12,11 @@
         <h1>Results</h1>
         <div id="final-score">Your score: 0</div>
         <form id="save-score-form">
-            <input type="text" id="username" placeholder="Enter your name" required>
+            <label for="username">
+                Username
+                <br>
+                <input type="text" id="username" placeholder="Enter your name" required>
+            </label>
             <button type="submit" class="btn">Save</button>
         </form>
         <div class="controls">
